--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "pg": "^8.11.3",
     "ts-node": "^10.9.2",
@@ -32,6 +33,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/helmet": "^4.0.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/knex": "^0.16.1",
     "@types/validator": "^13.11.7",
     "typescript": "^5.3.3"
